--- a/references.bib
+++ b/references.bib
@@ -849,6 +849,16 @@
   year={2018}
 }
 
+@article{dirksen2019sky,
+  title={Sky view factor calculations and its application in urban heat island studies},
+  author={Dirksen, M and Ronda, RJ and Theeuwes, NE and Pagani, GA},
+  journal={Urban Climate},
+  volume={30},
+  pages={100498},
+  year={2019},
+  publisher={Elsevier}
+}
+
 % Datasets
 @article{didan2021modis,
   title={MODIS/Terra vegetation indices 16-day L3 global 1 km SIN grid V061 [data set]},
@@ -856,4 +866,24 @@
   journal={NASA EOSDIS Land Processes DAAC. Available online: https://lpdaac.usgs.gov/products/mod13a2v061/ (accessed on 1 August 2023)},
   year={2021},
   doi={10.5067/MODIS/MOD13A2.061}
+}
+
+@techreport{myneni2021modis,
+  title={MODIS/Terra Leaf Area Index/FPAR 8-Day L4 Global 500m SIN Grid V061 [Dataset]. NASA EOSDIS Land Processes DAAC},
+  author={Myneni, R and Knyazikhin, Y and Park, T},
+  year={2021},
+  institution={Accessed 2023-08-09 from https://doi.org/10.5067/MODIS/MOD15A2H.061}
+}
+
+@misc{copernicus30dem,
+  title = { ESA - Copernicus DEM GLO-30 dataset },
+  publisher = { ESA - Copernicus },
+  doi = {10.5270/ESA-c5d3d65},
+  howpublished= {\url{https://doi.org/10.5270/ESA-c5d3d65}}
+}
+
+@misc{sentinel2msi,
+  title = { Sentinel-2 MSI: MultiSpectral Instrument, Level-2A },
+  publisher = { ESA - Copernicus },
+  howpublished= {\url{https://developers.google.com/earth-engine/datasets/catalog/COPERNICUS_S2_SR}}
 }
